<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="training.eduonix.weatherapp.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Switch
            android:id="@+id/temp_unit_swich"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:switchMinWidth="120dp"
            android:text="@string/temperature_unit"
            android:textColor="@android:color/black"
            android:textOff="@string/fahrenheit"
            android:textOn="@string/centigrade"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Switch
            android:id="@+id/auto_location_switch"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:switchMinWidth="120dp"
            android:text="@string/auto_location"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/about"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>
</FrameLayout>
